--- a/docs/partials/mobile-navigation.html
+++ b/docs/partials/mobile-navigation.html
@@ -3,6 +3,6 @@
     <img class="hamburger-icon" alt="Menu icon" src="{{root}}assets/img/icons/menu-grey.png">
   </button>
   <div class="global-nav-title">
-    <a class="zurb-logo" href="//www.get.foundation/index.html">ZURB <strong>Foundation</strong></a>
+    <a class="zurb-logo" href="https://www.get.foundation/index.html">ZURB <strong>Foundation</strong></a>
   </div>
 </div>
