--- a/docs/partials/off-canvi.html
+++ b/docs/partials/off-canvi.html
@@ -5,65 +5,65 @@
   <ul class="mobile-ofc vertical menu">
 
     <li>
-      <a href="//zurb.com/responsive">Showcase</a>
+      <a href="https://zurb.com/responsive">Showcase</a>
       <ul class="submenu menu vertical" data-submenu>
-        <li><a href="//zurb.com/responsive">Foundation Showcase</a></li>
-        <li><a href="//www.get.foundation/showcase/brands.html">Brands</a></li>
-        <li><a href="//www.get.foundation/showcase/case-studies.html">Case Studies</a></li>
-        <li><a href="//www.get.foundation/showcase/blog.html">Blog</a></li>
-        <li><a href="//www.get.foundation/showcase/buzz.html">Buzz</a></li>
-        <li><a href="//www.get.foundation/showcase/about.html">About Foundation</a></li>
+        <li><a href="https://zurb.com/responsive">Foundation Showcase</a></li>
+        <li><a href="https://www.get.foundation/showcase/brands.html">Brands</a></li>
+        <li><a href="https://www.get.foundation/showcase/case-studies.html">Case Studies</a></li>
+        <li><a href="https://www.get.foundation/showcase/blog.html">Blog</a></li>
+        <li><a href="https://www.get.foundation/showcase/buzz.html">Buzz</a></li>
+        <li><a href="https://www.get.foundation/showcase/about.html">About Foundation</a></li>
       </ul>
     </li>
 
     <li>
-      <a href="//www.get.foundation/develop/getting-started.html">Develop</a>
+      <a href="https://www.get.foundation/develop/getting-started.html">Develop</a>
       <ul class="submenu menu vertical" data-submenu>
         <li class="title">Frameworks</li>
-        <li><a href="//www.get.foundation/sites.html">Foundation for Sites</a></li>
-        <li><a href="//www.get.foundation/emails.html">Foundation for Email</a></li>
+        <li><a href="https://www.get.foundation/sites.html">Foundation for Sites</a></li>
+        <li><a href="https://www.get.foundation/emails.html">Foundation for Email</a></li>
         <li class="divider"></li>
         <li class="title">Develop</li>
-        <li><a href="//www.get.foundation/templates.html">HTML Templates</a></li>
-        <li><a href="//www.get.foundation/sites/resources.html">Resources</a></li>
-        <li><a href="//www.get.foundation/develop/building-blocks.html">Building Blocks</a></li>
-        <li><a href="//www.get.foundation/develop/contribute.html">Contribute</a></li>
+        <li><a href="https://www.get.foundation/templates.html">HTML Templates</a></li>
+        <li><a href="https://www.get.foundation/sites/resources.html">Resources</a></li>
+        <li><a href="https://www.get.foundation/develop/building-blocks.html">Building Blocks</a></li>
+        <li><a href="https://www.get.foundation/develop/contribute.html">Contribute</a></li>
       </ul>
     </li>
 
     <li>
-      <a href="//www.get.foundation/learn/tutorials.html">Tutorials</a>
+      <a href="https://www.get.foundation/learn/tutorials.html">Tutorials</a>
       <ul class="submenu menu vertical" data-submenu>
-        <li><a href="//www.get.foundation/learn/tutorials.html">Tutorials</a></li>
-        <li><a href="//www.get.foundation/learn/classes.html">Classes</a></li>
-        <li><a href="//www.get.foundation/learn/custom-training.html">Custom Training</a></li>
-        <li><a href="//www.get.foundation/learn/certification.html">Certification</a></li>
-        <li><a href="//www.get.foundation/learn/responsive-reading.html">Responsive Reading</a></li>
+        <li><a href="https://www.get.foundation/learn/tutorials.html">Tutorials</a></li>
+        <li><a href="https://www.get.foundation/learn/classes.html">Classes</a></li>
+        <li><a href="https://www.get.foundation/learn/custom-training.html">Custom Training</a></li>
+        <li><a href="https://www.get.foundation/learn/certification.html">Certification</a></li>
+        <li><a href="https://www.get.foundation/learn/responsive-reading.html">Responsive Reading</a></li>
       </ul>
     </li>
 
     <li>
-      <a href="//www.get.foundation/get-involved/support.html">Get Involved</a>
+      <a href="https://www.get.foundation/get-involved/support.html">Get Involved</a>
       <ul class="submenu menu vertical" data-submenu>
-        <li><a href="//www.get.foundation/get-involved/support.html">Connect</a></li>
-        <li><a href="//www.get.foundation/get-involved/premium-support.html">PLZ Halp</a></li>
-        <li><a href="//foundation.discourse.group">Foundation Forum</a></li>
-        <li><a href="//www.get.foundation/learn/events.html">Events</a></li>
-        <li><a href="//www.get.foundation/get-involved/faq.html">FAQs</a></li>
-        <li><a href="//www.get.foundation/get-involved/contribute.html">Contribute</a></li>
-        <li><a href="//www.get.foundation/get-involved/yetinauts.html">Yetinauts</a></li>
+        <li><a href="https://www.get.foundation/get-involved/support.html">Connect</a></li>
+        <li><a href="https://www.get.foundation/get-involved/premium-support.html">PLZ Halp</a></li>
+        <li><a href="https://foundation.discourse.group">Foundation Forum</a></li>
+        <li><a href="https://www.get.foundation/learn/events.html">Events</a></li>
+        <li><a href="https://www.get.foundation/get-involved/faq.html">FAQs</a></li>
+        <li><a href="https://www.get.foundation/get-involved/contribute.html">Contribute</a></li>
+        <li><a href="https://www.get.foundation/get-involved/yetinauts.html">Yetinauts</a></li>
       </ul>
     </li>
 
     <li>
-      <a href="//www.get.foundation/frameworks-docs.html">Docs</a>
+      <a href="https://www.get.foundation/frameworks-docs.html">Docs</a>
       <ul class="submenu menu vertical" data-submenu>
-        <li><a href="//www.get.foundation/docs/" target="_blank">Sites Docs</a></li>
-        <li><a href="//zurb.com/ink/docs.php" target="_blank">Email Docs</a></li>
+        <li><a href="https://www.get.foundation/docs/" target="_blank">Sites Docs</a></li>
+        <li><a href="https://zurb.com/ink/docs.php" target="_blank">Email Docs</a></li>
       </ul>
     </li>
 
-    <li><a href="//www.get.foundation/develop/getting-started.html" class="button">Getting Started</a></li>
+    <li><a href="https://www.get.foundation/develop/getting-started.html" class="button">Getting Started</a></li>
 
   </ul>
 </div>
