--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -158,6 +158,12 @@ $global-color-pick-contrast-tolerance: 0 !default;
     margin: 0;
     padding: 0;
 
+    // using environment variables to account for non-rectangular displays e.g. phones with notches
+    padding-top: env(safe-area-inset-top);
+    padding-right: env(safe-area-inset-right);
+    padding-bottom: env(safe-area-inset-bottom);
+    padding-left: env(safe-area-inset-left);
+
     background: $body-background;
 
     font-family: $body-font-family;
