--- a/scss/util/_color.scss
+++ b/scss/util/_color.scss
@@ -9,11 +9,11 @@ $contrast-warnings: true !default;
 ////
 /// Patch to fix issue #12080
 
-$primary-color: null;
-$secondary-color: null;
-$warning-color: null;
-$alert-color: null;
-$success-color:null;
+$primary-color   : null !default;
+$secondary-color : null !default;
+$warning-color   : null !default;
+$alert-color     : null !default;
+$success-color   : null !default;
 ////
 
 ////
